--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "clsx": "^1.1.1",
     "connected-react-router": "^6.8.0",
     "currency.js": "^2.0.3",
     "date-fns": "^2.16.1",
     "formik": "^2.2.5",
     "humps": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
