--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,12 +1,12 @@
-PORT=
-HOST=
-NODE_ENV=
-APP_KEY=
-SESSION_DRIVER=
-CACHE_VIEWS=
-DB_CONNECTION=
-PG_HOST=
-PG_PORT=
-PG_USER=
-PG_PASSWORD=
-PG_DB_NAME=
+PORT=3333
+HOST=localhost
+NODE_ENV=development
+APP_KEY=q3mwUBwDquoC7P_CHsfig5CWzjq5I8Rv
+SESSION_DRIVER=cookie
+CACHE_VIEWS=false
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=postgres
+PG_PASSWORD=123
+PG_DB_NAME=budgets
