--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.2",
     "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
