--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -12,6 +12,9 @@ WORKDIR /app
 COPY ["./packages/server/package.json", "./packages/server/package-lock.json", "/app/"]
 RUN npm ci
 COPY "./packages/server/" "/app/"
+WORKDIR public
+COPY --from=web_builder "/app/build/" "/app/public"
+COPY --from=web_builder "/app/build/index.html" "/app/resources/home.edge"
 RUN npm run build
 
 FROM node:12-slim as runtime
@@ -19,7 +22,7 @@ WORKDIR /app
 ENV NODE_ENV=production
 ARG PORT=3333
 ARG HOST=0.0.0.0
-ARG NODE_ENV=development
+ARG NODE_ENV=production
 ARG APP_KEY=0KgbxIvQSihjvkEN9BZRrG76LA0dzIi2
 ARG SESSION_DRIVER=cookie
 ARG CACHE_VIEWS=false
@@ -43,7 +46,4 @@ ENV PG_DB_NAME=${PG_DB_NAME}
 COPY --from=server_builder "/app/build/" "/app/"
 COPY --from=server_builder "/app/node_modules/" "/app/node_modules/"
 COPY --from=server_builder "/app/package.json" "/app/package.json"
-WORKDIR public
-COPY --from=web_builder "/app/build/" "/app/public"
-COPY --from=web_builder "/app/build/index.html" "/app/resources/home.edge"
 CMD ["npm", "run", "start"]
