--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^12.1.10",
         "clsx": "^1.1.1",
         "connected-react-router": "^6.8.0",
+        "date-fns": "^2.16.1",
         "formik": "^2.2.6",
         "humps": "^2.0.1",
         "query-string": "^6.13.8",
