Add editing income form

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,12 +23,12 @@
     "youch-terminal": "^1.0.1"
   },
   "dependencies": {
-    "@adonisjs/auth": "^5.0.2",
-    "@adonisjs/core": "^5.0.4-preview-rc",
-    "@adonisjs/lucid": "^9.0.3",
+    "@adonisjs/auth": "^5.1.1",
+    "@adonisjs/core": "^5.0.4-preview-rc-2.1",
+    "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/mail": "^5.2.3",
     "@adonisjs/repl": "^1.0.0",
-    "@adonisjs/session": "^4.0.5",
+    "@adonisjs/session": "^4.0.6",
     "@adonisjs/view": "^3.0.0",
     "@poppinss/utils": "^2.5.7",
     "luxon": "^1.25.0",
