--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-number-format": "^4.4.4",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-virtualized": "^9.22.3",
@@ -50,8 +51,7 @@
     "eslintConfig": {
         "extends": [
             "react-app",
-            "react-app/jest",
-            "prettier"
+            "react-app/jest"
         ],
         "rules": {
             "semi": [
@@ -85,7 +85,6 @@
     },
     "devDependencies": {
         "eslint": "^7.18.0",
-        "eslint-config-prettier": "^7.1.0",
         "prettier": "^2.2.1"
     }
 }
