--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,8 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "axios": "^0.21.1",
+        "axios-fetch-adapter": "git+https://github.com/vespaiach/axios-fetch-adapter.git",
         "clsx": "^1.1.1",
         "connected-react-router": "^6.8.0",
         "date-fns": "^2.16.1",
@@ -43,7 +45,7 @@
         "yup": "^0.32.8"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "dev": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
