--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
         "date-fns": "^2.16.1",
         "formik": "^2.2.6",
         "humps": "^2.0.1",
+        "material-ui-popup-state": "^1.7.1",
         "query-string": "^6.13.8",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
