Update axios adapter  package

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,8 +12,8 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "@vespaiach/axios-fetch-adapter": "^0.1.1",
         "axios": "^0.21.1",
-        "axios-fetch-adapter": "git+https://github.com/vespaiach/axios-fetch-adapter.git",
         "clsx": "^1.1.1",
         "connected-react-router": "^6.8.0",
         "date-fns": "^2.16.1",
