--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "scripts": {
         "bootstrap": "lerna bootstrap",
-        "dev": "lerna run dev --parallel"
+        "dev": "lerna run dev --parallel",
+        "build": "lerna run build --parallel"
     }
 }
