--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,14 +9,6 @@
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.57",
         "@material-ui/pickers": "^3.2.10",
-        "@vespaiach/axios-fetch-adapter": "^0.1.1",
-        "axios": "^0.21.1",
-        "clsx": "^1.1.1",
-        "date-fns": "^2.16.1",
-        "formik": "^2.2.6",
-        "humps": "^2.0.1",
-        "material-ui-popup-state": "^1.7.1",
-        "query-string": "^6.13.8",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -24,17 +16,23 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
+        "clsx": "^1.1.1",
+        "date-fns": "^2.16.1",
+        "formik": "^2.2.6",
+        "humps": "^2.0.1",
+        "material-ui-popup-state": "^1.7.1",
+        "query-string": "^6.14.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-number-format": "^4.4.4",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.2",
-        "typescript": "^4.0.3",
-        "web-vitals": "^0.2.4",
         "react-virtualized": "^9.22.3",
         "redux": "^4.0.5",
         "redux-saga": "^1.1.3",
+        "typescript": "^4.0.3",
+        "web-vitals": "^0.2.4",
         "workbox-background-sync": "^5.1.3",
         "workbox-broadcast-update": "^5.1.3",
         "workbox-cacheable-response": "^5.1.3",
@@ -50,6 +48,8 @@
         "yup": "^0.32.8"
     },
     "devDependencies": {
+        "@types/react-redux": "^7.1.16",
+        "@types/react-router-dom": "^5.1.7",
         "redux-saga-test-plan": "^4.0.1"
     },
     "scripts": {
