Adopt typescript to transaction forms

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,6 +50,7 @@
     "devDependencies": {
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.7",
+        "@types/react-virtualized": "^9.21.11",
         "redux-saga-test-plan": "^4.0.1"
     },
     "scripts": {
