--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,9 @@
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "clsx": "^1.1.1",
+        "d3-axis": "^2.0.0",
+        "d3-scale": "^3.2.3",
+        "d3-selection": "^2.0.0",
         "date-fns": "^2.16.1",
         "formik": "^2.2.6",
         "humps": "^2.0.1",
@@ -48,6 +51,9 @@
         "yup": "^0.32.8"
     },
     "devDependencies": {
+        "@types/d3-axis": "^2.0.0",
+        "@types/d3-scale": "^3.2.2",
+        "@types/d3-selection": "^2.0.0",
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.7",
         "@types/react-virtualized": "^9.21.11",
