--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,7 +19,6 @@
         "clsx": "^1.1.1",
         "d3-axis": "^2.0.0",
         "d3-scale": "^3.2.3",
-        "d3-selection": "^2.0.0",
         "date-fns": "^2.16.1",
         "formik": "^2.2.6",
         "humps": "^2.0.1",
@@ -48,19 +47,19 @@
         "workbox-routing": "^5.1.3",
         "workbox-strategies": "^5.1.3",
         "workbox-streams": "^5.1.3",
-        "yup": "^0.32.8"
-    },
-    "devDependencies": {
+        "yup": "^0.32.8",
+        "@types/react-redux": "^7.1.16",
         "@types/d3-axis": "^2.0.0",
         "@types/d3-scale": "^3.2.2",
-        "@types/d3-selection": "^2.0.0",
-        "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.7",
-        "@types/react-virtualized": "^9.21.11",
+        "@types/react-virtualized": "^9.21.11"
+    },
+    "devDependencies": {
         "redux-saga-test-plan": "^4.0.1"
     },
     "scripts": {
         "dev": "react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
