--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -7,8 +7,8 @@ CACHE_VIEWS=false
 DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
-PG_USER=postgres
-PG_PASSWORD=123
+PG_USER=budget
+PG_PASSWORD=budget
 PG_DB_NAME=budgets
 SMTP_HOST=
 SMTP_PORT=
