--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,4 @@
 node_modules
+.vscode
 build
 .dockerignore
-Dockerfile
-Dockerfile.prod
-packages/web/node_modules
-packages/server/node_modules
-packages/web/.vscode
-packages/server/.vscode
