--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
 version: '3.3'
-
 services:
-    db:
-        image: postgres
-        restart: always
-        user: "${UID}:${GID}"
-        volumes:
-            - ./tmp/pgdata:/var/lib/postgresql/data
-            - /etc/passwd:/etc/passwd:ro
-        environment:
-            - POSTGRES_PASSWORD=123
-            - POSTGRES_DB=budgets
-        ports:
-            - 5432:5432
+  budgets-postgres:
+    image: postgres
+    restart: always
+    container_name: budgets-postgres
+    volumes:
+      - budgets-db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=budgets
+      - POSTGRES_DB=budgets
+      - POSTGRES_USER=budgets
+    ports:
+      - 5432:5432
+
+  budgets-server:
+    build:
+      context: .
+      dockerfile: Dockerfile.server
+    container_name: budgets-server
+    ports:
+      - 3333:3333
+    volumes:
+      - ./packages/server:/workspace
+    environment: 
+      - PORT=3333
+    depends_on: 
+      - budgets-postgres
+
+volumes:
+  budgets-db:
