--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,44 +1,31 @@
 {
-  "name": "budget-server",
+  "name": "server",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "node ace build --production",
-    "start": "node server.js",
-    "dev": "node ace serve --watch",
-    "lint": "eslint . --ext=.ts",
-    "format": "prettier --write .",
-    "migrate": "node ace migration:run",
-    "seed": "node ace db:seed",
-    "createacc": "node ace create:owner"
-  },
+  "main": "index.js",
+  "author": "Toan Nguyen",
+  "license": "MIT",
   "devDependencies": {
-    "@adonisjs/assembler": "^3.0.0",
-    "adonis-preset-ts": "^1.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-adonis": "^1.0.15",
-    "eslint-plugin-prettier": "^3.1.4",
-    "pino-pretty": "^4.3.0",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.5",
-    "youch": "^2.1.1",
-    "youch-terminal": "^1.0.1"
+    "nodemon": "^2.0.7",
+    "prisma": "^2.21.2",
+    "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@adonisjs/auth": "^5.1.1",
-    "@adonisjs/core": "^5.0.4-preview-rc-2.1",
-    "@adonisjs/lucid": "^10.0.0",
-    "@adonisjs/mail": "^5.2.3",
-    "@adonisjs/repl": "^1.0.0",
-    "@adonisjs/session": "^4.0.6",
-    "@adonisjs/view": "^3.0.0",
-    "@poppinss/utils": "^2.5.7",
-    "luxon": "^1.25.0",
-    "pg": "^8.5.1",
-    "phc-argon2": "^1.0.11",
-    "proxy-addr": "^2.0.6",
-    "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "@prisma/client": "^2.21.2",
+    "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.3",
+    "@types/lodash": "^4.14.168",
+    "dataloader": "^2.0.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "faker": "^5.5.3",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
+    "lodash": "^4.17.21",
+    "typescript": "^4.2.4"
+  },
+  "scripts": {
+    "seeding": "ts-node ./src/seeding",
+    "dev": "nodemon",
+    "predev": "prisma migrate deploy"
   }
 }
