--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,16 +12,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/d3-axis": "^2.0.0",
+    "@types/d3-scale": "^3.2.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-virtualized": "^9.21.11",
     "clsx": "^1.1.1",
     "d3-axis": "^2.0.0",
     "d3-scale": "^3.2.3",
     "date-fns": "^2.16.1",
     "formik": "^2.2.6",
     "humps": "^2.0.1",
+    "immutability-helper": "^3.1.1",
+    "just-hooks": "^0.4.0",
     "material-ui-popup-state": "^1.7.1",
     "query-string": "^6.14.0",
     "react": "^17.0.1",
@@ -47,12 +54,7 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3",
-    "yup": "^0.32.8",
-    "@types/react-redux": "^7.1.16",
-    "@types/d3-axis": "^2.0.0",
-    "@types/d3-scale": "^3.2.2",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-virtualized": "^9.21.11"
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "redux-saga-test-plan": "^4.0.1"
