--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,7 +23,6 @@
   },
   "scripts": {
     "seeding": "ts-node ./src/seeding",
-    "dev": "nodemon",
-    "predev": "prisma migrate resolve --applied \"20210421162637_init\""
+    "dev": "nodemon"
   }
 }
