--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
+    "build:server": "lerna run --scope test-server prisma:generate && lerna run --scope server prisma:generate && lerna run --scope server build",
+    "start:server": "lerna run --scope server start",
     "dev:server": "lerna run --scope server dev",
-    "test:server": "lerna run --scope test-server test",
+    "test:server": "lerna run --scope test-server test --stream",
+    "test": "npm run start:server & npm run test:server",
     "prettier:clean": "prettier **/* -w",
     "lerna": "lerna"
   },
@@ -26,5 +29,9 @@
     "arrowParens": "always",
     "singleQuote": true,
     "printWidth": 100
+  },
+  "dependencies": {
+    "concurrently": "^6.0.2",
+    "tree-kill": "^1.2.2"
   }
 }
