fix: debug github action

--- a/.github/workflows/test_api.yml
+++ b/.github/workflows/test_api.yml
@@ -10,8 +10,6 @@ jobs:
   integration-test:
     runs-on: ubuntu-18.04
 
-    container: node:lts-buster
-
     services:
       db:
         image: postgres
@@ -24,9 +22,18 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
       
     steps:
       - uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Dependencies installation
         run: |
