--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build:server": "lerna run --scope test-server prisma:generate && lerna run --scope server prisma:generate && lerna run --scope server prisma:deploy && lerna run --scope server build:test",
+    "build:server": "lerna run --scope test-server prisma:generate && lerna run --scope server prisma:generate && lerna run --scope server prisma:deploy && lerna run --scope server build",
     "test:server": "lerna run --scope test-server test",
     "test": "npm run start:server & npm run test:server",
     "prettier:clean": "prettier **/* -w",
