--- a/packages/server/.env.development
+++ b/packages/server/.env.development
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://budgets:budgets@budgets-postgres:5432/budgets?schema=public
+DATABASE_URL=postgresql://budgets:budgets@localhost:5432/budgets?schema=public
+SERVER_PORT=3333
