--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,21 +5,24 @@
   "author": "Toan Nguyen",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prisma": "^2.21.2"
   },
   "dependencies": {
     "@prisma/client": "^2.21.2",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.3",
     "@types/lodash": "^4.14.168",
+    "ajv": "^8.6.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.0",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
-    "typescript": "^4.2.4",
-    "prisma": "^2.21.2",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "seed": "ts-node ./src/seeding",
@@ -28,6 +31,7 @@
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy",
-    "start": "node ./out/server.js"
+    "start": "node ./out/server.js",
+    "postinstall": "prisma generate"
   }
 }
