feat: create app skeleton

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -56,10 +61,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.0",
-    "graphql": "^15.5.3",
-    "@graphql-codegen/typescript-react-apollo": "3.1.4",
+    "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-operations": "2.1.4",
-    "@graphql-codegen/introspection": "2.1.0"
+    "@graphql-codegen/typescript-react-apollo": "3.1.4",
+    "@types/react-router-dom": "^5.1.9",
+    "graphql": "^15.5.3"
   }
 }
