--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
@@ -66,6 +68,7 @@
     "@graphql-codegen/typescript-operations": "2.1.4",
     "@graphql-codegen/typescript-react-apollo": "3.1.4",
     "@types/react-router-dom": "^5.1.9",
+    "@types/react-virtualized": "^9.21.13",
     "graphql": "^15.5.3"
   }
 }
