--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-sequences": "off"
+    }
   },
   "browserslist": {
     "production": [
