--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
     "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,8 +17,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "date-fns": "^2.24.0",
     "formik": "^2.2.9",
-    "history": "^5.0.1",
     "immutability-helper": "^3.1.1",
     "localforage": "^1.10.0",
     "react": "^17.0.2",
