--- a/app.json
+++ b/app.json
@@ -7,6 +7,16 @@
     "NODE_ENV": {
       "description": "Runtime environment",
       "value": "deployment"
+    },
+    "REACT_APP_LEDGER_GRAPHQL_API": {
+      "description": "Backend API URL",
+      "value": "https://ledger-graphql.herokuapp.com/"
     }
-  }
+  },
+  "buildpacks": [
+    {
+      "url": "https://buildpack-registry.s3.amazonaws.com/buildpacks/mars/create-react-app.tgz"
+    }
+  ],
+  "success_url": "/"
 }
