--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "immutability-helper": "^3.1.1",
     "localforage": "^1.10.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.7.3",
@@ -72,6 +73,7 @@
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-operations": "2.1.4",
     "@graphql-codegen/typescript-react-apollo": "3.1.4",
+    "@types/ramda": "^0.27.45",
     "@types/react-router-dom": "^5.1.9",
     "@types/react-virtualized": "^9.21.13",
     "graphql": "^15.5.3"
