--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,12 @@
 overwrite: true
-schema: 'https://ledger-graphql.herokuapp.com/'
+schema: 'https://ledger-graphql.herokuapp.com/graphql'
 documents: './src/graphql/**/*.graphql'
 generates:
-  src/graphql.generated.ts:
+  src/graphql/graphql.generated.ts:
     plugins:
       - 'typescript'
       - 'typescript-operations'
       - 'typescript-react-apollo'
-  ./graphql.schema.json:
+  src/graphql/graphql.schema.json:
     plugins:
       - 'introspection'
