--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.11",
+    "@apollo/client": "^3.5.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
@@ -20,6 +20,7 @@
     "date-fns": "^2.24.0",
     "formik": "^2.2.9",
     "immutability-helper": "^3.1.1",
+    "jotai": "^1.5.3",
     "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-virtualized": "^9.22.3",
+    "react-virtuoso": "^2.6.0",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
@@ -39,11 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "gentype": "graphql-codegen",
-    "graphql:coverage": "graphql coverage",
-    "graphql:validate": "graphql validate",
-    "graphql:codegen": "graphql codegen",
-    "gql:gen": "graphql-codegen --config codegen.yml"
+    "gentype": "node ./codegen.js"
   },
   "eslintConfig": {
     "extends": [
@@ -67,13 +65,14 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/cli": "^2.5.0",
     "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/typescript": "2.2.2",
-    "@graphql-codegen/typescript-operations": "2.1.4",
-    "@graphql-codegen/typescript-react-apollo": "3.1.4",
+    "@graphql-codegen/typescript": "^2.4.3",
+    "@graphql-codegen/typescript-operations": "^2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.5",
     "@types/react-router-dom": "^5.1.9",
     "@types/react-virtualized": "^9.21.13",
-    "graphql": "^15.5.3"
+    "dotenv": "^16.0.0",
+    "graphql": "^16.3.0"
   }
 }
