--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ledger-f",
-  "version": "0.1.0",
+  "name": "ledger",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -10,31 +10,23 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.4.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
     "@types/luxon": "^2.0.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "formik": "^2.2.9",
+    "graphql": "^16.3.0",
     "jotai": "^1.5.3",
     "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-virtuoso": "^2.6.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "react-virtuoso": "^2.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "gentype": "node ./codegen.js"
   },
   "eslintConfig": {
@@ -65,8 +57,9 @@
     "@graphql-codegen/typescript-operations": "^2.2.4",
     "@graphql-codegen/typescript-react-apollo": "^3.2.5",
     "@types/react-router-dom": "^5.1.9",
-    "@types/react-virtualized": "^9.21.13",
+    "@vitejs/plugin-react": "^1.2.0",
     "dotenv": "^16.0.0",
-    "graphql": "^16.3.0"
+    "typescript": "^4.5.5",
+    "vite": "^2.8.1"
   }
 }
