--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
     "luxon": "^2.3.0",
+    "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-number-format": "^4.9.1",
+    "react-router-dom": "^6.2.1",
     "react-virtuoso": "^2.6.0"
   },
   "scripts": {
