--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,13 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  buildAndDeploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16.x
+
+      - name: Install dependencies and build 
         uses: actions/setup-node@v2
         with:
           node-version: '16'
@@ -18,16 +19,12 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Copy build to remote server 
+      - name: Copy build to remote server
         uses: garygrossgarten/github-action-scp@release
         with:
           local: dist
-          remote: /home/$SSH_USER/www/ledger 
-          host: ${{ secrets.HOST }}
+          remote: /home/$SSH_USER/www/ledger
+          rmRemote: true
+          host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           password: ${{ secrets.SSH_PASSWORD }}
