--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
 
     env:
       SSH_USER: ${{ secrets.SSH_USER }}
+      VITE_GRAPHQL_URL: ${{ secrets.GRAPHQL_URL }}      
 
     steps:
       - uses: actions/checkout@v2
