--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
     "react-virtuoso": "^2.6.0"
