--- a/package.json
+++ b/package.json
@@ -4,24 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.0",
-    "@mui/icons-material": "^5.4.1",
-    "@mui/lab": "^5.0.0-alpha.68",
-    "@mui/material": "^5.4.1",
     "@types/luxon": "^2.0.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "formik": "^2.2.9",
+    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
     "luxon": "^2.3.0",
     "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.27.0",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
     "react-virtuoso": "^2.6.0"
