--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@react-spring/web": "^9.4.3",
     "@types/luxon": "^2.0.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
