--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "flatpickr": "^4.6.9",
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
     "luxon": "^2.3.0",
