--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
-    "flatpickr": "^4.6.9",
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
     "luxon": "^2.3.0",
@@ -19,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.2",
     "react-virtuoso": "^2.6.0"
   },
   "scripts": {
@@ -55,6 +55,7 @@
     "@graphql-codegen/typescript-operations": "^2.2.4",
     "@graphql-codegen/typescript-react-apollo": "^3.2.5",
     "@types/react-router-dom": "^5.1.9",
+    "@types/react-transition-group": "^4.4.4",
     "@vitejs/plugin-react": "^1.2.0",
     "dotenv": "^16.0.0",
     "typescript": "^4.5.5",
