--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@react-spring/web": "^9.4.3",
+    "@use-gesture/react": "^10.2.9",
     "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
@@ -46,15 +47,15 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.5.0",
     "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-operations": "^2.2.4",
     "@graphql-codegen/typescript-react-apollo": "^3.2.5",
-    "@graphql-codegen/typescript": "^2.4.3",
     "@types/luxon": "^2.0.9",
     "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.9",
     "@types/react-transition-group": "^4.4.4",
-    "@types/react": "^17.0.0",
     "@vitejs/plugin-react": "^1.2.0",
     "dotenv": "^16.0.0",
     "typescript": "^4.5.5",
