--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.3.1",
+    "email-validator": "^2.0.4",
     "graphql": "^16.3.0",
     "jotai": "^1.5.3",
+    "jwt-decode": "^3.1.2",
     "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
