--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jotai": "^1.5.3",
     "jwt-decode": "^3.1.2",
     "luxon": "^2.3.0",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.9.1",
