--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "start": "npx serve -s dist -l $PORT",
     "gentype": "node ./codegen.js"
   },
   "eslintConfig": {
