--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@vespaiach/horizontal-calendar": "^2.0.1",
     "classnames": "^2.3.1",
     "email-validator": "^2.0.4",
     "graphql": "^16.3.0",
